cargo-features = ["strip"]

[package]
name = "dev-server"
version = "0.1.0"
authors = ["gegy1000 <gegy1000@gmail.com>"]
edition = "2018"

[profile.release]
strip = "symbols"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.10", features = ["rustls-tls", "json"], default-features = false }

serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

fancy-regex = "0.3"
